# analytics-platform

./: .gitignore  NORTH_STAR.md  PROGRESS.md  PROJECT_CONTEXT.md  README.md  ROADMAP.md  SIA_PROFILE.md  docker-compose.yml
databricks-notebooks/: 03b_build_dim_product_scd2.py  07_build_page_view_gold.py  ga4_01_ingest_web_analytics.py  page_view_gold.sql
databricks-workflows/: amazon_shipment_ingestion_weekly.json  slice_1_daily.json
docs/: RESUME_HIGHLIGHTS.md  RUNBOOK.md  existing_data_inventory.md  legacy_panoply_etl.md  orchestration_workflows_vs_airflow.md  phase1_summary.md  streaming_module_plan.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
metrics-service/: .dockerignore  .gitignore  Dockerfile  README.md  bench_cache.py  pyproject.toml  test_databricks_sp.py  test_m2m.py
metrics-service/app/: auth.py  cache.py  databricks_client.py  main.py  metrics_loader.py
metrics-service/app/routers/: catalog.py  cohort.py  lineage.py  realtime.py
metrics-service/data_quality/: README.md  reporter.py  runner.py
metrics-service/data_quality/checkers/: base.py  freshness.py  not_null.py  range.py  unique.py
metrics-service/data_quality/configs/: dim_channel.yaml  dim_date.yaml  dim_product.yaml  fact_orders_line.yaml  shopify_orders.yaml  tw_attribution.yaml
metrics-service/data_quality/tests/: test_all_checkers.py  test_not_null.py  test_runner.py
metrics-service/metrics/: definitions.yaml
metrics-service/tests/: conftest.py  test_api.py  test_auth.py  test_bind_params.py  test_catalog.py  test_metrics_real.py
(+231 files in other folders)
